add security and swagger

--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
-DB_URL=
-DB_USERNAME=
-DB_PASSWORD=
-
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=
+APPLICATION_NAME=
+DATASOURCE_URL=
+DATASOURCE_USER=
+DATASOURCE_PASSWORD=
+HIBERNATE_DDL_AUTO=
+HIBERNATE_DIALECT=
