--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
-spring.application.name=${APPLICATION_NAME}
+spring.application.name=sushi-masters
 spring.datasource.url=${DATASOURCE_URL}
 spring.datasource.username=${DATASOURCE_USER}
 spring.datasource.password=${DATASOURCE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=${HIBERNATE_DDL_AUTO}
 spring.jpa.database-platform=${HIBERNATE_DIALECT}
+logging.level.root=INFO
+logging.level.murkeev=DEBUG
+logging.file.name=logs/sushi-masters.log
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
