--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ logging.level.root=INFO
 logging.level.murkeev=DEBUG
 logging.file.name=logs/sushi-masters.log
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+b2.bucket.name=${B2_S3_BUCKET_NAME}
+b2.s3.endpoint=${B2_S3_ENDPOINT}
+b2.s3.accessKey=${B2_S3_ACCESS_KEY}
+b2.s3.secretKey=${B2_S3_SECRET_KEY}
