Add unit tests and integration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
-spring.application.name=sushi-masters
-spring.datasource.url=${DATASOURCE_URL}
-spring.datasource.username=${DATASOURCE_USER}
-spring.datasource.password=${DATASOURCE_PASSWORD}
-spring.jpa.hibernate.ddl-auto=${HIBERNATE_DDL_AUTO}
-spring.jpa.database-platform=${HIBERNATE_DIALECT}
-b2.bucket.name=${B2_S3_BUCKET_NAME}
-b2.s3.endpoint=${B2_S3_ENDPOINT}
-b2.s3.accessKey=${B2_S3_ACCESS_KEY}
-b2.s3.secretKey=${B2_S3_SECRET_KEY}
-jwt.secret=${JWT_SECRET}
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+JWT_SECRET=test
+B2_S3_ENDPOINT=http://localhost:9000
+B2_S3_ACCESS_KEY=test
+B2_S3_SECRET_KEY=test
+B2_S3_BUCKET_NAME=test
